Fix video playback controls flicker

--- a/stylesheets/components/Lightbox.scss
+++ b/stylesheets/components/Lightbox.scss
@@ -94,6 +94,14 @@
       }
     }
 
+    &--video {
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+
     height: auto;
     max-height: 100%;
     max-width: 100%;
